--- a/PortalNews/NewsPaper/templates/news/post.html
+++ b/PortalNews/NewsPaper/templates/news/post.html
@@ -11,6 +11,23 @@ Post
 <div style="margin: 2% 5% 2% 5%; padding: 10px; text-align: left">
     <h1 style="text-align: left;">{{ post.title|censor }}</h1>
     <hr>
+
+    {% if perms.news.change_post %}
+        {% if post.type_post == "NWS" %}
+        <a href="{% url 'news_update' post.id %}">Править новость</a>
+        {% elif post.type_post == "ART" %}
+        <a href="{% url 'articles_update' post.id %}">Править статью</a>
+        {% endif %}
+    {% endif %}
+
+    {% if perms.news.delete_post %}
+        {% if post.type_post == "NWS" %}
+        <a href="{% url 'news_delete' post.id %}">Удалить новость</a>
+        {% elif post.type_post == "ART" %}
+        <a href="{% url 'articles_delete' post.id %}">Удалить статью</a>
+        {% endif %}
+    {% endif %}
+
     <!-- Строка рейтинга и даты публикации, расставленные по левому и правому краю соответственно -->
     <div style="width: 100%; height: 30px; text-align: right">
         <span style="float: left">
