--- a/PortalNews/NewsPaper/templates/subscriptions/subscriptions_categories.html
+++ b/PortalNews/NewsPaper/templates/subscriptions/subscriptions_categories.html
@@ -12,7 +12,7 @@ Subscriptions
                 {% csrf_token %}
                 <input type="hidden" name="category_id" value="{{ category.id }}" />
                 {% if category.user_subscribed %}
-                    <button name="action" value="unsubscribe" style="background-color:#DCDCDC;">Отписаться</button>
+                    <button name="action" value="unsubscribe">Отписаться</button>
                 {% else %}
                     <button name="action" value="subscribe" style="background-color:#0dcaf0; color:#FFFFFF">Подписаться</button>
                 {% endif %}
