--- a/PortalNews/NewsPaper/templates/flatpages/default.html
+++ b/PortalNews/NewsPaper/templates/flatpages/default.html
@@ -1,3 +1,7 @@
+{% load cache %}
+
+<!-- Время жизни кэша шапки сайта 6 часов-->
+{% cache 21600 header %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -8,7 +12,7 @@
         {% endblock title %}
     </title>
 
-    <!-- Ссылка на CSS -->
+    <!-- Ссылка на CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -56,6 +60,7 @@
             </div>
         </div>
     </nav>
+{% endcache %}
 
     <!-- Page content-->
     <div class="container-fluid">
